<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>mx.kenzie</groupId>
        <artifactId>hypertext</artifactId>
        <version>1.1.0</version>
    </parent>

    <artifactId>${project.parent.artifactId}-common</artifactId>
    <name>Common</name>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.valross</groupId>
            <artifactId>constantine</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>

</project>